--- a/src/components/pages/AdminPage.css
+++ b/src/components/pages/AdminPage.css
@@ -1,53 +1,68 @@
-.admin-page-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
+.admin-page {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: #5c22b9;
+  padding-top: 40px;
   
-  .admin-page-heading {
-    font-size: 3rem;
-    margin-bottom: 2rem;
-  }
-  
-  .admin-page-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .admin-page-table {
-    width: 50%;
-    margin-top: 2rem;
-    border-collapse: collapse;
-    text-align: center;
-  }
-  
-  .admin-page-table th {
-    background-color: #4caf50;
-    color: white;
-    font-size: 1.2rem;
-    padding: 1rem;
-  }
-  
-  .admin-page-table td {
-    padding: 1rem;
-    border: 1px solid #ddd;
-  }
-  
-  .admin-page-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 0.8rem 1.5rem;
-    border: none;
-    border-radius: 0.3rem;
-    font-size: 1.2rem;
-    margin-top: 2rem;
-    cursor: pointer;
-  }
-  
-  .admin-page-button:hover {
-    background-color: #3e8e41;
-  }
-  
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  font-family: cursive;
+}
+
+th {
+  background-color: #b8a2db;
+  font-weight: bold;
+  font-family: cursive;
+}
+
+button {
+  margin-right: 10px;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: transparent;
+  color: #0a0a0a;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #b8aacc;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+  /* margin-left: 130px; */
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+input[type="submit"] {
+  padding: 6px 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4caf50;
+  color: #fff;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #3e8e41;
+}
